[package]
name = "html-images-inliner"
version = "0.1.1"
edition = "2021"

[lints]
workspace = true

[workspace.lints.rust]
non_shorthand_field_patterns = "allow"

[workspace.lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
unsafe_op_in_unsafe_fn = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.36", features = ["derive"] }
kuchikiki = "0.8.2"
mime = "0.3.17"
mime_guess = "2.0.5"
rayon = "1.10.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
